# python-calendar-cli

./: .gitignore  .pre-commit-config.yaml  BUG_ANALYSIS_CREDENTIALS.md  README.md  TEST_COVERAGE_ANALYSIS.md  TEST_PERFORMANCE_ANALYSIS.md  analysis.md  config.json  pyproject.toml  tech_debt_analysis.md
.github/: COPILOT-CLI-USAGE.md  SPECKIT-SETUP-GUIDE.md  copilot-instructions.md
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
caltool/: cli.py
specs/001-gmail-client-refactor/: plan.md  research.md  spec.md  tasks.md
specs/001-gmail-client-refactor/checklists/: requirements.md
specs/002-dry-solid-cleanup/: CONSISTENCY_ANALYSIS.md  plan.md  research.md  spec.md  tasks.md
specs/002-dry-solid-cleanup/checklists/: requirements.md
specs/003-composition-refactor/: plan.md  spec.md  tasks.md
specs/004-gtool-restructure/: plan.md  spec.md  tasks.md
specs/004-gtool-restructure/checklists/: requirements.md
specs/005-remove-auth-cli-dependency/: plan.md  spec.md  tasks.md
specs/006-layer-separation/: IMPLEMENTATION_COMPLETE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-layer-separation/checklists/: requirements.md
specs/006-layer-separation/contracts/: exception-contracts.md
specs/007-gmail-list-enhancements/: data-model.md  quickstart.md  spec.md  tasks.md
specs/007-gmail-list-enhancements/checklists/: requirements.md
specs/007-gmail-list-enhancements/contracts/: gmail-list-contracts.md
specs/008-gmail-todo-workflow/: next-feature.md
src/caltool/: cli.py  config.py  datetime_utils.py  errors.py  format.py  gcal_client.py  gcal_client_v2.py  gmail_client.py  gmail_client_v2.py  google_auth.py  google_client.py  retry_policy.py  scheduler.py  service_factory.py
src/gtool/: __init__.py
src/gtool/cli/: __init__.py  decorators.py  errors.py  formatters.py  main.py
src/gtool/clients/: __init__.py  calendar.py  gmail.py
src/gtool/config/: __init__.py  settings.py
src/gtool/core/: __init__.py  models.py  scheduler.py
src/gtool/infrastructure/: __init__.py  auth.py  error_categorizer.py  exceptions.py  retry.py  service_factory.py
src/gtool/utils/: __init__.py  datetime.py
tests/: conftest.py  test_backward_compatibility.py  test_caltool.py  test_cli.py  test_cli_gcal.py  test_config.py  test_datetime_utils.py  test_env_config.py  test_error_categorizer.py  test_errors.py  test_format.py  test_gcal_client.py  test_gcal_client_v2.py  test_gmail_client.py  test_gmail_client_v2.py  test_google_auth.py  test_google_client.py  test_layer_separation.py  test_retry_policy.py  test_scheduler.py  test_service_factory.py
