[project]
name = "caltool"
version = "0.1.0"
description = ""
authors = [
    {name = "Steffen Vulpius",email = "steffen.vulpius+github@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client (>=2.169.0,<3.0.0)",
    "google-auth (>=2.39.0,<3.0.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "click (>=8.1.8,<9.0.0)",
]

[tool.poetry.scripts]
caltool = "caltool.cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
